# monsoon-quant-v2

./: .gitignore  README.md  app.py  backtest_strategy.py  data_loader.py  db_handler.py  executor_paper.py  feature_engineer.py  main.py  market_loader.py  monsoon_production.db  monsoon_xgboost.joblib  pyproject.toml  requirements.txt  trading_bot.py  train_classifier.py  train_model.py  weather_loader.py
