[project]
name = "monsoon-quantv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "xgboost>=3.3.0",
    "yfinance>=1.5.1",
]
